--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,21 +1,9 @@
-/* styles.css */
-
-/* Carousel Container Styles */
-/* .coursels-container {
-    box-shadow: 
-      0 -4px 8px rgba(0, 0, 0, 0.1), 
-      0 4px 8px rgba(0, 0, 0, 0.1), 
-      0 6px 20px rgba(0, 0, 0, 0.1);
-    border-radius: 10px; 
-    overflow: hidden; 
-    padding-left: 10%;
-    padding-right: 10%;
+.carousel-container {
+  max-width: 10%; 
+  max-height: 400px; 
+  box-shadow: 0px -10px 20px rgba(0, 0, 0, 0.1), 0px 10px 20px rgba(0, 0, 0, 0.1);
 }
-
-
-.carousel-item {
-    width: 100%;        
-    height: 500px;     
-    object-fit: cover; 
-    border-radius: 10px;
-} */
+.carousel img {
+  border-radius: 100px; 
+  padding: 10%;
+}
