--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,21 +1,38 @@
-/* styles.css */
 
-/* Carousel Container Styles */
-/* .coursels-container {
-    box-shadow: 
-      0 -4px 8px rgba(0, 0, 0, 0.1), 
-      0 4px 8px rgba(0, 0, 0, 0.1), 
-      0 6px 20px rgba(0, 0, 0, 0.1);
-    border-radius: 10px; 
-    overflow: hidden; 
-    padding-left: 10%;
-    padding-right: 10%;
+/* coursel home */
+.carousel-container {
+  box-shadow:
+    0 -10px 20px rgba(0, 0, 0, 0.25), 
+    0 10px 20px rgba(0, 0, 0, 0.25);  
+  border-radius: 10px;
+  overflow: hidden;
+  max-width: 100%;
+  max-height: 100%;
+  padding: 20% 10%; 
+}
+.carousel img {
+  width: 100%;        
+  height: 600px;     
+  object-fit: cover; 
+  border-radius: 10px; 
+}
+/* sponsor */
+.sponsor-container {
+  overflow: hidden; 
+  position: relative;
+  height: 100px; 
 }
 
-
-.carousel-item {
-    width: 100%;        
-    height: 500px;     
-    object-fit: cover; 
-    border-radius: 10px;
-} */
+.sponsor-content {
+  display: flex;
+  animation: scrollLeft 15s linear infinite; 
+}
+/* keyframes */
+@keyframes scrollLeft {
+  0% {
+      transform: translateX(100%);
+  }
+  100% {
+      transform: translateX(-100%); 
+  }
+}
